# dwata

./: .gitignore  Cargo.toml  DEVELOP.md  README.md  package.json  pnpm-lock.yaml
.cargo/: config.toml
docs/: 01-overview.md  02-architecture.md  03-database-schema.md  04-agents-reference.md  05-api-reference.md  06-user-guide.md  README.md
dwata-agents/: Cargo.toml
dwata-agents/src/: lib.rs
dwata-agents/src/financial_extractor/: agent.rs  mod.rs  system_prompt.rs  types.rs
dwata-agents/src/storage/: mod.rs  sqlite_storage.rs
dwata-agents/src/tools/: executor.rs  mod.rs
dwata-api/: Cargo.toml
dwata-api/src/: config.rs  lib.rs  main.rs
dwata-api/src/database/: companies.rs  contact_links.rs  contacts.rs  credentials.rs  downloads.rs  emails.rs  events.rs  extraction_jobs.rs  financial_extraction_attempts.rs  financial_extraction_sources.rs  financial_patterns.rs  financial_transactions.rs  folders.rs  labels.rs  linkedin_connections.rs  migrations.rs  mod.rs  models.rs  positions.rs  queries.rs
dwata-api/src/handlers/: companies.rs  contacts.rs  credentials.rs  downloads.rs  emails.rs  events.rs  extraction_jobs.rs  financial.rs  folders.rs  labels.rs  mod.rs  oauth.rs  pattern_generation.rs  positions.rs  settings.rs
dwata-api/src/helpers/: database.rs  google_oauth.rs  imap_oauth.rs  keyring_service.rs  mod.rs  oauth_state.rs  pattern_validator.rs  token_cache.rs
dwata-api/src/integrations/: imap_client.rs  mod.rs  nocodo.rs  real_imap_client.rs
dwata-api/src/jobs/: download_manager.rs  extraction_manager.rs  financial_extraction_manager.rs  mod.rs
extractors/: Cargo.toml  README.md
extractors/src/: lib.rs
extractors/src/attachment_parser/: ics.rs  mod.rs  vcf.rs
extractors/src/financial_patterns/: extractor.rs  mod.rs
extractors/src/linkedin_archive/: csv_parser.rs  date_parser.rs  mod.rs  processors.rs
gui/: .env.example  SETTINGS_GUIDE.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
gui/src/: App.tsx  index.css  index.tsx
gui/src/api/: emails.ts
gui/src/api-types/: types.ts
gui/src/components/: Sidebar.tsx
gui/src/components/emails/: FolderIcon.tsx
gui/src/config/: api.ts
gui/src/pages/: BackgroundJobs.tsx  Calendar.tsx  Emails.tsx  FinancialExtractions.tsx  FinancialHealth.tsx  Projects.tsx  Settings.tsx  Tasks.tsx
gui/src/pages/settings/: Accounts.tsx  ApiKeys.tsx  Folders.tsx  General.tsx
shared-types/: Cargo.toml
shared-types/src/: company.rs  contact.rs  contact_link.rs  credential.rs  download.rs  email.rs  event.rs  extraction.rs  extraction_job.rs  financial.rs  folder.rs  label.rs  lib.rs  position.rs  project.rs  session.rs  settings.rs  task.rs
tasks/: attachment-parser-extractor.md  credential-storage-api.md  credentials-list-implementation.md  credentials-list-visual.md  database-stored-financial-patterns.md  email-storage-and-imap-implementation.md  extraction-framework-foundation.md  extraction-job-manager.md  financial-email-text-extractor.md  financial-extraction-attempt-stats.md  gliner-ner-extractor.md  gmail-oauth2-authentication.md  imap-credential-types-usage.md  imap-download-manager.md  imap-form-visual-layout.md  linkedin-archive-extractor.md  llm-based-extractor.md  migrate-duckdb-to-sqlite.md  pattern-based-extractor.md  settings-imap-form-implementation.md  setup-core-types-and-database.md
