[package]
name = "dwata-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
actix-web.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
# nocodo-llm-sdk.workspace = true
# nocodo-agents.workspace = true
# manager-tools.workspace = true
shared-types = { path = "../shared-types" }
rusqlite = { version = "0.37", features = ["bundled"] }
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
home = "0.5"
