[package]
name = "dwata-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
actix-web.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
# nocodo-llm-sdk.workspace = true
# nocodo-agents.workspace = true
# manager-tools.workspace = true
shared-types = { path = "../shared-types" }
duckdb = { version = "1.1", features = ["bundled"] }
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
dirs = "5.0"
config = { version = "0.14", default-features = false, features = ["toml"] }
toml = "0.8"
tracing.workspace = true
 tracing-subscriber.workspace = true
  tracing-appender = "0.2"
  clap.workspace = true
  actix-cors = "0.6"
keyring = { version = "2.3" }
rand = "0.8"
