[package]
name = "extractors"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shared-types = { path = "../shared-types" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Attachment parsing
ical = "0.10"
csv = "1.3"

# Financial pattern extraction
regex = "1.10"
